objects/AcctSeedERP__Inventory_Balance__c/AcctSeedERP__Inventory_Balance__c.object-meta.xml
<CustomObject>
    <label>Inventory Quantity Available</label>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Inventory Quantity Available Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Quantity Available</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>