objects/AcctSeedERP__Inventory_Balance__c/fields/AcctSeedERP__Inbound_Accounting_Quantity__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Inbound_Accounting_Quantity__c</fullName>
    <label>Inbound Accounting Quantity</label>
    <summarizedField>AcctSeedERP__Inbound_Inventory_Movement__c.AcctSeedERP__Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>AcctSeedERP__Inbound_Inventory_Movement__c.AcctSeedERP__Type__c</field>
        <operation>equals</operation>
        <value>Accounting</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeedERP__Inbound_Inventory_Movement__c.AcctSeedERP__Inventory_Balance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>