objects/AcctSeedERP__Inventory_Balance__c/fields/AcctSeedERP__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ledger</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Ledger__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Transactional</value>
        </filterItems>
        <infoMessage>Only Transactional Ledgers are allowed.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Inventory Quantity Available</relationshipLabel>
    <relationshipName>Inventory_Quantity_Available</relationshipName>
    <type>Lookup</type>
</CustomField>