objects/AcctSeedERP__Inventory_Balance__c/fields/AcctSeedERP__Outbound_Quantity__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Outbound_Quantity__c</fullName>
    <label>Outbound Quantity</label>
    <summarizedField>AcctSeedERP__Outbound_Inventory_Movement__c.AcctSeedERP__Quantity__c</summarizedField>
    <summaryForeignKey>AcctSeedERP__Outbound_Inventory_Movement__c.AcctSeedERP__Inventory_Balance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>