objects/AcctSeedERP__Inventory_Balance__c/fields/AcctSeedERP__Warehouse__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>AcctSeedERP__Warehouse__c</referenceTo>
    <relationshipLabel>Inventory Quantity Available</relationshipLabel>
    <relationshipName>Inventory_Balance</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>