objects/AcctSeedERP__Inventory_Balance__c/fields/Average_Cost__c.field-meta.xml
<CustomField>
    <fullName>Average_Cost__c</fullName>
    <formula>AcctSeedERP__Product__r.AcctSeed__Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>