objects/AcctSeedERP__Inventory_Balance__c/fields/Qty_Available__c.field-meta.xml
<CustomField>
    <fullName>Qty_Available__c</fullName>
    <label>Qty Available</label>
    <length>10</length>
    <type>Text</type>
</CustomField>