objects/AcctSeedERP__Inventory_Balance__c/validationRules/AcctSeedERP__Outbound_Less_Than_Equal_Inbound.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeedERP__Outbound_Less_Than_Equal_Inbound</fullName>
    <active>true</active>
    <description>Ensure outbound inventory movements are less than or equal to outbound inventory movements</description>
    <errorConditionFormula>(AcctSeedERP__Purchasing_Quantity__c +  AcctSeedERP__Inbound_Quantity__c) &lt; (AcctSeedERP__Manufacturing_Quantity__c + AcctSeedERP__Sales_Order_Quantity__c +  AcctSeedERP__Outbound_Quantity__c)</errorConditionFormula>
    <errorMessage>The aggregate outbound quantity on the inventory balance cannot be more than the aggregate inbound quantity</errorMessage>
</ValidationRule>