objects/AcctSeedERP__Inventory_Balance__c/listViews/AcctSeedERP__All.listView-meta.xml
<ListView>
    <fullName>AcctSeedERP__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeedERP__Product__c</columns>
    <columns>AcctSeedERP__Warehouse__c</columns>
    <columns>AcctSeedERP__Available_Quantity__c</columns>
    <columns>AcctSeedERP__Ledger__c</columns>
    <columns>AcctSeedERP__Inbound_Quantity__c</columns>
    <columns>AcctSeedERP__Outbound_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>