objects/AcctSeedERP__Inventory_Balance__c/listViews/Dallas.listView-meta.xml
<ListView>
    <fullName>Dallas</fullName>
    <columns>NAME</columns>
    <columns>AcctSeedERP__Product__c</columns>
    <columns>AcctSeedERP__Warehouse__c</columns>
    <columns>AcctSeedERP__Location__c</columns>
    <columns>AcctSeedERP__Available_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeedERP__Warehouse__c</field>
        <operation>equals</operation>
        <value>Dallas</value>
    </filters>
    <label>Dallas</label>
</ListView>